posiGen_FullsendBox/src/objects/PM_Tool__c.object
<CustomObject>
    <fields>
        <fullName>State_Final_Submission_Aging__c</fullName>
        <formula>IF(ISNULL( State_Final_Submission_SD_Parallel__c ),NULL, 
IF(!ISNULL( State_Final_Submission_ED__c ),State_Final_Submission_ED__c - State_Final_Submission_SD_Parallel__c, TODAY() - State_Final_Submission_SD_Parallel__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Final Submission Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_EDT__c</fullName>
        <label>State Final Submission EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_ED__c</fullName>
        <formula>State_Final_Submission_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Final Submission ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Final Submission NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_SDT__c</fullName>
        <label>State Final Submission SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_SD_Parallel__c</fullName>
        <label>State Final Submission SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission_SD__c</fullName>
        <formula>State_Final_Submission_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Final Submission SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Final_Submission__c</fullName>
        <formula>IF( State_Final_Submission_NA_Override__c == TRUE, NULL, IF(AND(Record_Type_Parallel_Workflow__c == &apos;LA&apos;,  Billing_Packet_Status__c  = &apos;Completed&apos;), 2,  IF(AND(OR(Record_Type_Parallel_Workflow__c == &apos;NY&apos;,Record_Type_Parallel_Workflow__c == &apos;CT&apos;), NOT(ISNULL( Rebate_Completion_Date__c ))), 2,  IF(AND( Record_Type_Parallel_Workflow__c == &apos;NY&apos;, NOT(ISNULL( Activation_Date__c ))), 1,  IF(AND(Record_Type_Parallel_Workflow__c == &apos;CT&apos;, NOT(ISNULL( Utility_Final_Approval_Completed_Date__c ))), 1,  IF(AND(Record_Type_Parallel_Workflow__c == &apos;LA&apos;, NOT(ISNULL( Placed_In_Service_Date__c ))), 1,  0) )))))</formula>
        <label>State Final Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_Aging__c</fullName>
        <formula>IF(ISNULL(State_Initial_Submission_SD_Parallel__c ),NULL, 
IF(!ISNULL( State_Initial_Submission_ED__c ), State_Initial_Submission_ED__c - State_Initial_Submission_SD_Parallel__c, TODAY() - State_Initial_Submission_SD_Parallel__c))</formula>
        <label>State Initial Submission Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_EDT__c</fullName>
        <label>State Initial Submission EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_ED__c</fullName>
        <formula>State_Initial_Submission_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Initial Submission ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_Installation__c</fullName>
        <formula>IF( 
	State_Initial_Submission_NA_Override__c == TRUE, 
	NULL, 
	IF(
		AND(
			OR( Record_Type_p__c == &apos;NY&apos;, Record_Type_p__c == &apos;CT&apos;), 
			NOT(
				ISNULL(State_Program_Application_Approved_Date__c)
			)
		),
		2, 
		IF(
			AND(
				OR( Record_Type_p__c == &apos;NY&apos;,Record_Type_p__c == &apos;CT&apos; ), 
				OR( Feasibility_Result_Parallel__c == &apos;Feasible&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Smaller System)&apos; , Feasibility_Result_Parallel__c == &apos;Feasible (Redeploy)&apos;), 
				PV_Install_Status__c!=null 
			),
			1, 
			0
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Initial Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Initial Submission NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_SDT__c</fullName>
        <label>State Initial Submission SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_SD_Parallel__c</fullName>
        <label>State Initial Submission SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Initial_Submission_SD__c</fullName>
        <formula>State_Initial_Submission_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Initial Submission SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Program_Application_Approved_Date__c</fullName>
        <formula>Deal__r.State_Program_Application_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Program Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Program_Application_Submitted_Date__c</fullName>
        <formula>Deal__r.State_Program_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Program Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Deal__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <formula>Deal__r.System_Size_in_KW__c</formula>
        <label>System Size</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telemarketer_Parallel__c</fullName>
        <formula>Deal__r.Telemarketer__r.FirstName +&quot; &quot; +  Deal__r.Telemarketer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemarketer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketer__c</fullName>
        <formula>Deal__r.Telemarketer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telemarketer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_Aging__c</fullName>
        <formula>IF(ISNULL(Upgrade_Modeling_SD_Parallel__c ),NULL, 
IF(!ISNULL(Upgrade_Modeling_ED__c ),Upgrade_Modeling_ED__c - Upgrade_Modeling_SD_Parallel__c, TODAY() - Upgrade_Modeling_SD_Parallel__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Modeling Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_EDT__c</fullName>
        <label>Upgrade Modeling EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_ED__c</fullName>
        <formula>Upgrade_Modeling_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Modeling ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_NA_Override__c</fullName>
        <formula>IF( EE_Accepted__c == FALSE, TRUE, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Modeling NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_SDT__c</fullName>
        <label>Upgrade Modeling SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_SD_Parallel__c</fullName>
        <label>Upgrade Modeling SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling_SD__c</fullName>
        <formula>Upgrade_Modeling_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Modeling SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Modeling__c</fullName>
        <formula>IF( 
Upgrade_Modeling_NA_Override__c == TRUE, 
NULL, 
IF( 
AND( 
NOT( 
ISNULL( Work_Scope_Approved__c ) 
), 
Record_Type_p__c == &apos;NY&apos;, 
EE_Accepted__c == TRUE, 
EA_Project_Status_Parallel__c == &apos;Completed&apos;	
), 
2, 
IF( 
AND( 
Record_Type_p__c == &apos;NY&apos;, 
EE_Accepted__c == TRUE,	
OR( Feasibility_Result_Parallel__c == &apos;Feasible&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Smaller System)&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Redeploy)&apos;),
EA_Project_Status_Parallel__c == &apos;Completed&apos;	
), 
1, 
0 
) 
) 
)</formula>
        <label>Upgrade Modeling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Final_Approval_Completed_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.Utility_Final_Approval_Completed_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Final Approval Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Final_Approval_Requested_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.Utility_Final_Approval_Requested_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Final Approval Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Final_Apprvl_Com_Dt_prll__c</fullName>
        <label>Utility Final Apprvl Com Dt prll</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Parallel__c</fullName>
        <label>Utility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>IF(Deal__r.Electricity_Provider__r.IsPersonAccount = true, Deal__r.Electricity_Provider__r.FirstName+&apos; &apos;+Deal__r.Electricity_Provider__r.LastName, Deal__r.Electricity_Provider__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Scope_Approved__c</fullName>
        <label>EU Work Scope Approved</label>
        <type>Date</type>
    </fields>
    <label>PM Tool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CT_Active</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>CT - Active</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>CT - Cancelled</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Completed</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Project_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>CT - Completed</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Non_Feasible</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Non-Feasible</value>
        </filters>
        <label>CT - Non-Feasible</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Terminated</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Terminated</value>
        </filters>
        <label>CT - Terminated</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Transfer</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Transfer</value>
        </filters>
        <label>CT - Transfer</label>
        <sharedTo>
            <group>CT_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_CT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Active</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>LA - Active</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>LA - Cancelled</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Completed</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>LA - Completed</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Non_Feasible</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Non-Feasible</value>
        </filters>
        <label>LA - Non-Feasible</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Terminated</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Terminated</value>
        </filters>
        <label>LA - Terminated</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LA_Transfer</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>LA</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Transfer</value>
        </filters>
        <label>LA - Transfer</label>
        <sharedTo>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_LA</group>
            <group>Project_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NY_Active</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Address__c</columns>
        <columns>State__c</columns>
        <columns>Completion_Average__c</columns>
        <columns>Aging_Since_Contract_Approved__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>Lease_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Parallel__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>NY - Active</label>
        <sharedTo>
            <group>NY_Project_Management</group>
            <group>PM_Executive</group>
            <group>PM_Lead_Ops_Manager_NY</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NY_Active_Projects</fullName>
        <columns>Opportunity_Numeric_ID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Address__c</columns>
        <columns>Feasibility_Aging__c</columns>
        <columns>NAME</columns>
        <columns>Feasibility_Project_Status_Parallel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>Feasibility_Project_Status_Parallel__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <filters>
            <field>Feasibility_Project_Status_Parallel__c</field>
            <operation>equals</operation>
            <value>completed</value>
        </filters>
        <label>NY - Active Feasibility Projects w/ Age</label>
        <sharedTo>
            <group>NY</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PM Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>